recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:4: error: '<-' expected but ')' found.
  for(i)
       ^FourSquare:15: error: illegal start of simple expression
} 
^