recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  var x=100.0;
  var o=90.0;
  for(i)
  avance(x);
  setCap(o);
  
    avance(x);
  setCap(o);
    avance(x);
  setCap(o);
    avance(x);
  setCap(o);
  
}